--- a/easy-tickets/settings.gradle
+++ b/easy-tickets/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'easy-tickets'
 
-include 'eureka-server', 'user-service', 'easy-tickets'
+include 'eureka-server', 'user-service', 'easy-tickets', 'event-service'
